# lattice-c

./: CMakeLists.txt  README.md
resource/: 12.txt  15.txt  3.txt  4.txt  bkz17.txt  bkz17rev.txt  test.txt
src/: enumerate.c  enumerate.h  la.c  la.h  lp.c  lp.h  main.c  parse.c  parse.h
